Localization for qtype 1 and 2 completely separated.

--- a/pymeddx/localization/type1_localization.json
+++ b/pymeddx/localization/type1_localization.json
@@ -1,5 +1,6 @@
 {
     "title": "Question",
+    "description": "",
     "question_explanation": "Please choose the option you agree with the most about the displayed fundus image.",
     "positive_answer": "This image displays the signs of background",
     "negative_answer": "I believe that this image does not show any of the listed conditions.",
